--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
                 <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>  
             </div>
-        </div>2
+        </div>
     </nav>
     <section id = "profile">
         <div class="section__pic-container">
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>As a computer programming student at Karamanoglu Mehmetbey University, I am looking for internship to
+                    <p class="os">As a computer programming student at Karamanoglu Mehmetbey University, I am looking for internship to
                         improve my programming skills and be able to have experience in industry, currently i am learning Javascript
                         and previously did C# Automations with databases also when i was studying at Ecole42 Istanbul learned C
                         programming algorithms, how programming works on computer side and how the hardware responses our code
@@ -248,7 +248,6 @@
         </div>
         <img src="./assets 2/arrow.png" alt="arrow icon" class="icon arrow" 
         onclick="location.href='.#contact'">
-        <p class="os"> <b>Be able to use Windows and MacOS Platforms</b></p>
     </section>
     <section id="contact">
         <p class="section__text__p1">Get in Touch</p>
