--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="article-container">
                         <article>
                             <img 
-                            src="./assets 2/checkmark.png" 
+                            src="./assets 2/c.png" 
                             alt="Experience icon" 
                             class="icon"
                             />
@@ -117,7 +117,7 @@
                         </article>
                         <article>
                             <img 
-                            src="./assets 2/checkmark.png" 
+                            src="./assets 2/csharp.svg" 
                             alt="Experience icon" 
                             class="icon"
                             />
@@ -128,7 +128,7 @@
                         </article>
                         <article>
                             <img 
-                            src="./assets 2/checkmark.png" 
+                            src="https://cdn.prod.website-files.com/6417f234f5b343f280553234/642b1de4e5842855b222c96f_logo-sql.webp" 
                             alt="Experience icon" 
                             class="icon"
                             />
@@ -139,7 +139,7 @@
                         </article>
                         <article>
                             <img 
-                            src="./assets 2/checkmark.png" 
+                            src="./assets 2/javascript.svg" 
                             alt="Experience icon" 
                             class="icon"
                             />
@@ -150,7 +150,7 @@
                         </article>
                         <article>
                             <img 
-                            src="./assets 2/checkmark.png" 
+                            src="https://upload.wikimedia.org/wikipedia/commons/3/38/HTML5_Badge.svg" 
                             alt="Experience icon" 
                             class="icon"
                             />
@@ -161,7 +161,7 @@
                         </article>
                         <article>
                             <img 
-                            src="./assets 2/checkmark.png" 
+                            src="https://upload.wikimedia.org/wikipedia/commons/6/62/CSS3_logo.svg" 
                             alt="Experience icon" 
                             class="icon"
                             />
@@ -177,7 +177,7 @@
                     <div class="article-container">
                         <article>
                             <img 
-                            src="./assets 2/checkmark.png" 
+                            src="https://cdn.prod.website-files.com/6417f234f5b343f280553234/642b1de4f786911bd7e65289_logo-postman.webp" 
                             alt="Experience icon" 
                             class="icon"
                             />
@@ -188,7 +188,7 @@
                         </article>
                         <article>
                             <img 
-                            src="./assets 2/checkmark.png" 
+                            src="https://cdn.prod.website-files.com/6417f234f5b343f280553234/642b1de40ae95707a5e0cfad_logo-selenium.svg" 
                             alt="Experience icon" 
                             class="icon"
                             />
@@ -199,7 +199,7 @@
                         </article>
                         <article>
                             <img 
-                            src="./assets 2/checkmark.png" 
+                            src="https://cdn.prod.website-files.com/6417f234f5b343f280553234/642b1de059bb336163748e2b_logo-java.svg" 
                             alt="Experience icon" 
                             class="icon"
                             />
@@ -210,7 +210,7 @@
                         </article>
                         <article>
                             <img 
-                            src="./assets 2/checkmark.png" 
+                            src="https://cdn.prod.website-files.com/6417f234f5b343f280553234/642b1de3b3abe68cb20e48c6_logo-ngsuit.webp" 
                             alt="Experience icon" 
                             class="icon"
                             />
@@ -221,7 +221,7 @@
                         </article>
                         <article>
                             <img 
-                            src="./assets 2/checkmark.png" 
+                            src="https://cdn.prod.website-files.com/6417f234f5b343f280553234/642b1de03b450bf13b2c8837_logo-eclipse.webp" 
                             alt="Experience icon" 
                             class="icon"
                             />
@@ -232,7 +232,7 @@
                         </article>  
                         <article>
                             <img 
-                            src="./assets 2/checkmark.png" 
+                            src="https://cdn.prod.website-files.com/6417f234f5b343f280553234/642b1de3c919bb01148aa75e_logo-junit5.webp" 
                             alt="Experience icon" 
                             class="icon"
                             />
