--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 </button>
             </div>
                     <div id ="socials-container">
-                        <img src="./assets 2/linkedin.png" alt="My LinkedIn Profile" class="icon"
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg" alt="My LinkedIn Profile" class="icon"
                         onclick="location.href='https://www.linkedin.com/in/haliltekin-/'">
-                        <img src="./assets 2/github.png" alt="My Github Profile" class="icon"
+                        <img src="./assets 2/github.svg" alt="My Github Profile" class="icon"
                         onclick="location.href='https://www.github.com/fullC19H28O2'">
                     </div>
             </div>
@@ -69,14 +69,10 @@
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
-                        <img src="./assets 2/experience.png" 
-                        alt="Experience icon" 
-                        class="icon">
                         <h3>Experience</h3><br>
                         <p><b>6 months </b> <br> <br> <b> Full Stack Development</b></p>
                     </div>
                     <div class="details-container">
-                        <img src="./assets 2/education.png" alt="Education icon" class="icon">
                         <h3>Education</h3>
                         <br>
                         <p class="ed">B.Sc. Bachelors Degree (Dropout) at <b>Ecolé 42</b></p>
@@ -263,7 +259,7 @@
           </div>
           <div class="contact-info-container">
             <img
-              src="./assets 2/linkedin.png"
+              src="https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg"
               alt="LinkedIn icon"
               class="icon contact-icon"
             />
@@ -284,5 +280,25 @@
         <p>Copyright &#169; 2024 Halil Tekin. All Rights Reserved.</p>
       </footer>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script>
+  const options = {
+  top: '32px', // default: '32px'
+  right: '32px', // default: '32px'
+  left: 'unset', // default: 'unset'
+  time: '0.7s', // default: '0.3s'
+  mixColor: '#fff', // default: '#fff'
+  backgroundColor: '#fff',  // default: '#fff'
+  buttonColorDark: '#100f2c',  // default: '#100f2c'
+  buttonColorLight: '#fff', // default: '#fff'
+  saveInCookies: true, // default: true,
+  label: '🌓', // default: ''
+  autoMatchOsTheme: true // default: true
+}
+
+const darkmode = new Darkmode(options);
+darkmode.showWidget();
+</script>
+
 </body>
 </html>
