--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
 <script>
   const options = {
-  top: '32px', // default: '32px'
+  bottom: '32px', // default: '32px'
   right: '32px', // default: '32px'
   left: 'unset', // default: 'unset'
   time: '0.7s', // default: '0.3s'
