--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div class="logo">Halil Tekin</div>
         <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="x"></span>
+                <span class="x"></span>
+                <span class="x"></span>
             </div>
             <div class="menu-links">
                 <li><a href="#about" onclick="toggleMenu()">About</a></li>
