--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </div>
                 </div>      
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Working on SDET/QA Tester</h2>
+                    <h2 class="experience-sub-title">Working on SDET/QA Testing</h2>
                     <div class="article-container">
                         <article>
                             <img 
@@ -278,7 +278,7 @@
             </ul>
           </div>
         </nav>
-        <p>Copyright &#169; 2024 Halil Tekin. All Rights Reserved.</p>
+        <p>Copyright &#169; 2025 Halil Tekin. All Rights Reserved.</p>
       </footer>
     <script src="script.js"></script>
 <script>
