--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <br>
                         <p class="ed">B.Sc. Bachelors Degree (Dropout) at <b>Ecolé 42</b></p>
                         <br>
-                        <p class="ed">Associate Degree  <b> Computer Programming </b></p>
+                        <p class="ed"> <b> Computer Engineering </b></p>
                     </div>
                 </div>
                 <div class="text-container">
