--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <img src="https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg" alt="My LinkedIn Profile" class="icon"
                         onclick="location.href='https://www.linkedin.com/in/haliltekin-/'">
                         <img src="./assets 2/github.svg" alt="My Github Profile" class="icon"
-                        onclick="location.href='https://www.github.com/fullC19H28O2'">
+                        onclick="location.href='https://www.github.com/haloscript3'">
                     </div>
             </div>
         </div>
